[tool.poetry]
name = "sandbox-python"
version = "0.1.0"
description = ""
authors = ["Asjad Jawed Siddiqui <asjadjawed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.0"
ruff = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

