[tool.poetry]
name = "sandbox-python"
version = "0.1.0"
description = ""
authors = ["Asjad Jawed Siddiqui <asjadjawed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.0"
ipython = "^8.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
